[metadata]
name = openstack
summary = Tempest plugin tripleo_common_tempest_plugin
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/tripleo-docs/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    tripleo_common_tempest_plugin

[build_sphinx]
all_files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = tripleo_common_tempest_plugin/locale
domain = tripleo_common_tempest_plugin

[update_catalog]
domain = tripleo_common_tempest_plugin
output_dir = tripleo_common_tempest_plugin/locale
input_file = tripleo_common_tempest_plugin/locale/tripleo_common_tempest_plugin.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = tripleo_common_tempest_plugin/locale/tripleo_common_tempest_plugin.pot

[entry_points]
tempest.test_plugins =
    tripleo_common_tests = tripleo_common_tempest_plugin.plugin:TripleOCommonTempestPlugin

