[metadata]
name = tripleo-common-tempest-plugin
summary = Tempest plugin tripleo_common_tempest_plugin
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/tripleo-docs/latest/
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    tripleo_common_tempest_plugin

[entry_points]
tempest.test_plugins =
    tripleo_common_tests = tripleo_common_tempest_plugin.plugin:TripleOCommonTempestPlugin

